# logos

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  config.logos.toml  docker-compose.yml  package.json  rustfmt.toml
clients/web/: .eslintrc  .gitignore  .prettierrc  next.config.js  package.json  tailwind.config.js  tsconfig.json
clients/web/src/: middleware.ts
clients/web/src/app/: global-error.tsx  layout.tsx  loading.tsx  page.tsx
clients/web/src/app/(core)/: layout.tsx  page.tsx
clients/web/src/app/auth/: layout.tsx  page.tsx
clients/web/src/components/: auth.tsx  follow-worthy.tsx  header.tsx  hello.tsx  icons.tsx  tab-bar.tsx  welcome.tsx
clients/web/src/components/ui/: button.tsx  dropdown-menu.tsx  menu.tsx
clients/web/src/lib/: utils.ts
clients/web/src/styles/: globals.css
clients/web/src/types/: api.ts  global.d.ts
docker/: docker-compose.yml
docker/service/: Dockerfile
docker/web/: Dockerfile
docs/: CODE_OF_CONDUCT.md  README.md  SECURITY.md  notes.md
guard/: nginx.conf
services/auth/: .json  Cargo.toml
services/auth/src/: lib.rs  main.rs
services/auth/src/oauth/: create.rs  mod.rs  resolve.rs
services/auth/src/providers/: discord.rs  github.rs  mod.rs  spotify.rs
services/auth/src/routes/: create.rs  mod.rs  resolve.rs
services/auth/src/utils/: mod.rs  oauth.rs
services/core/: Cargo.toml
services/core/src/: lib.rs  main.rs
services/gatekeeper/: Cargo.toml  config.logos.toml
services/gatekeeper/src/: config.rs  main.rs
services/gatekeeper/src/routes/: intercept.rs  mod.rs
services/locksmith/: Cargo.toml
services/locksmith/src/: lib.rs  main.rs
services/locksmith/src/routes/: create.rs  resolve.rs
services/steward/: Cargo.toml
services/steward/src/: lib.rs  main.rs
services/steward/src/routes/: mod.rs  read.rs  update.rs
services/steward/src/routes/recommendation/: follow_worthy.rs  mod.rs
services/user/: Cargo.toml
services/user/src/: lib.rs  main.rs
services/user/src/routes/: read.rs  update.rs
services/utils/: Cargo.toml
services/utils/src/: lib.rs
tools/: concur.sh  start.sh  tmux.sh
