[package]
edition = "2021"
name = "auth"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "logos-auth"
path = "src/main.rs"

[dependencies]
actix-cors = "0.6.4"
actix-session = {version = "0.7.2", features = ["redis-actor-session"]}
actix-web = "4.3.0"
anyhow = "1.0.69"
dotenv = "0.15.0"
oauth2 = "4.3.0"
redis = {version = "0.22.3", default-features = false, features = ["tokio-comp", "connection-manager"]}
reqwest = {version = "0.11.14", features = ["json"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
utils = {path = "../utils"}
