[package]
edition = "2021"
name = "locksmith"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[dependencies]
actix-cors.workspace = true
actix-session.workspace = true
actix-web.workspace = true
dotenv_codegen.workspace = true
oauth2 = "4.3.0"
redis = {version = "0.22.3", default-features = false, features = ["tokio-comp", "connection-manager"]}
reqwest = {version = "0.11.14", features = ["json"]}
serde.workspace = true
serde_json = "1.0.93"
utils.workspace = true
uuid = {version = "1.3.0", features = ["v5"]}
