[package]
edition = "2021"
name = "steward"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[dependencies]
actix-cors.workspace = true
actix-web.workspace = true
dotenv_codegen.workspace = true
neo4rs = "0.5.9"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.94"
utils.workspace = true
